--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: perl
-# v0.004_000
+# v0.005_000
 
 # NEED FIX, CORRELATION #ap010: old version of Travis build OS does not support apt-get installation of libpcre2* ???
 #addons:
@@ -46,9 +46,10 @@ before_install:
     - sudo apt-get update -qq
 
 install:
-    - sudo apt-get install -qq g++-4.8
-    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
-    - sudo apt-get install -qq libstdc++-4.8-dev
+#    - sudo apt-get install -qq g++-4.8
+#    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+    - sudo apt-get install gcc-5 g++-5
+    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
     # DEV NOTE, CORRELATION #ap001: must install IO::Socket::SSL & Alien::Build from Makefile.PL (which becomes META.json, for CPAN) & .travis.yml & appveyor.yml 
     - cpanm --verbose IO::Socket::SSL
     - cpanm --verbose Alien::Build
