--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,7 +60,9 @@ install:
 
     set PERL5LIB=blib;lib
 
-    set MAKE=gmake_FROM_APPVEYOR_YML
+    set MAKE=gmake
+
+    set MAKE_FROM=APPVEYOR_YML
 
     set PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;C:\windows\system32;C:\windows;C:\Perl\site\bin;C:\Perl\bin;C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;C:\Progra~1\7-Zip;C:\Progra~1\Micros~1\WebPla~1\;C:\Tools\GitVersion;C:\Tools\PsTools;C:\Progra~1\GitLFS~1;C:\Progra~2\Subversion\bin;C:\Progra~1\Micros~2\120\Tools\Binn\;C:\Progra~1\Micros~2\Client~1\ODBC\110\Tools\Binn\;C:\Progra~2\Micros~1\120\Tools\Binn\;C:\Progra~1\Micros~2\120\DTS\Binn\;C:\Progra~2\Micros~1\120\Tools\Binn\ManagementStudio\;C:\Tools\WebDriver;C:\Progra~2\Micros~4\TypeScript\1.4\;C:\Progra~2\Micros~3.0\Common7\IDE\PrivateAssemblies\;C:\Progra~2\Micros~4\Azure\CLI\wbin;C:\Ruby193\bin;C:\Tools\NUnit\bin;C:\Tools\xUnit;C:\Tools\MSpec;C:\Tools\Coverity\bin;C:\Progra~2\CMake\bin;C:\go\bin;C:\Progra~1\Java\jdk1.8.0\bin;C:\Python27;C:\Progra~1\nodejs;C:\Progra~2\iojs;C:\Progra~1\iojs;C:\Users\appveyor\AppData\Roaming\npm;C:\Progra~1\Micros~2\130\Tools\Binn\;C:\Progra~2\MSBuild\14.0\Bin;C:\Tools\NuGet;C:\Progra~2\MI0E91~1.0\Common7\IDE\CommonExtensions\Microsoft\TestWindow;C:\Progra~1\MI8460~1\Dnvm;C:\Progra~1\Micros~2\Client~1\ODBC\130\Tools\Binn\;C:\Progra~2\Micros~1\130\Tools\Binn\;C:\Progra~2\Micros~1\130\DTS\Binn\;C:\Progra~1\Micros~2\130\DTS\Binn\;C:\Progra~2\Micros~1\110\DTS\Binn\;C:\Progra~2\Micros~1\120\DTS\Binn\;C:\Progra~2\Apache\Maven\bin;C:\Python27\Scripts;C:\Tools\NUnit3;C:\Progra~1\Mercurial\;C:\Progra~1\LLVM\bin;C:\Progra~1\dotnet\;C:\Progra~1\erl8.3\bin;C:\Tools\curl\bin;C:\Progra~1\Amazon\AWSCLI\;C:\Progra~1\Git\cmd;C:\Progra~1\Git\usr\bin;C:\Progra~2\Micros~1\140\DTS\Binn\;C:\Progra~2\MI0E91~1.0\Common7\IDE\Extensions\Microsoft\SQLDB\DAC\140;C:\ProgramData\chocolatey\bin;C:\Progra~2\nodejs\;C:\Progra~2\Yarn\bin;C:\Progra~1\MIA72F~1\bin\Fabric\Fabric.Code;C:\Progra~1\MIA713~1\Servic~1\Tools\ServiceFabricLocalClusterManager;C:\Users\appveyor\AppData\Roaming\npm;C:\Users\appveyor\AppData\Local\Yarn\bin;C:\Progra~1\AppVeyor\BuildAgent\
 
@@ -68,9 +70,9 @@ install:
 
     perl -le "print for @INC"
 
-    perl Makefile.PL
-
     cpanm --verbose --installdeps .
+
+    perl Makefile.PL
 
     dmake
 
