--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,10 @@
 # [ CPAN Build & Distribution ]
 # NEED UPDATE, CORRELATION #aj000: list of CPAN files & directories to delete/exclude in Makefile.PL, .gitignore, and MANIFEST.SKIP
 # MANIFEST.SKIP is not auto-generated, do not exclude
-# MYMETA.json is required for build dependencies, do not exclude, git only
+# META.* & MYMETA.* are required for build dependencies, do not exclude, git only
 /MANIFEST
 /MANIFEST.bak
-/META.*
+#/META.*
 #/MYMETA.*
 /Makefile
 /Makefile.old
