--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,12 @@ abstract: 'Find Or Download/Build/Install libjpcre2 In JPCRE2'
 author:
   - 'Will Braswell <wbraswell@cpan.org>'
 build_requires:
-  Alien::Build::MM: '0.60'
-  Alien::PCRE2: '0.007'
+  Alien::Build::MM: '0.25'
+  Alien::PCRE2: '0'
   Alien::gmake: '0.11'
   Archive::Tar: '0'
   Config: '0'
+  Env::ShellWords: '0.01'
   HTML::LinkExtor: '0'
   HTTP::Tiny: '0.044'
   IO::Socket::SSL: '1.56'
@@ -19,7 +20,8 @@ build_requires:
 configure_requires:
   Alien::Build: '0.60'
   Alien::Build::MM: '0.60'
-  Alien::PCRE2: '0.007'
+  Alien::Build::Plugin::Build::SearchDep: '0.35'
+  ExtUtils::CBuilder: '0'
   File::Find::Rule: '0.34'
   IO::Socket::SSL: '2.043'
 dynamic_config: 1
@@ -41,12 +43,13 @@ no_index:
     - t
     - inc
 requires:
-  Alien::Build: '0.60'
+  Alien::Build: '0.25'
+  Alien::PCRE2: '0.008'
 resources:
   IRC: irc://irc.perl.org/#native
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Alien-JPCRE2
   homepage: https://neurobin.org/projects/softwares/libs/jpcre2/
   license: http://dev.perl.org/licenses/
   repository: git://github.com/wbraswell/alien-jpcre2.git
-version: '0.002000'
+version: '0.003000'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
