--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,17 +46,17 @@ install:
 
     echo gmake ALIEN_INSTALL_TYPE = %ALIEN_INSTALL_TYPE%
 
-    cpanm --verbose Alien::MSYS
+    cpanm Alien::MSYS
 
-    cpanm --verbose Alien::gmake
+    cpanm Alien::gmake
 
     set ALIEN_INSTALL_TYPE=%ALIEN_INSTALL_TYPE_TMP%
 
     echo post-gmake ALIEN_INSTALL_TYPE = %ALIEN_INSTALL_TYPE%
 
-    cpanm --verbose --notest IO::Socket::SSL
+    cpanm --notest IO::Socket::SSL
 
-    cpanm --verbose --notest Alien::Build
+    cpanm --notest Alien::Build
 
     set PERL5LIB=blib;lib
 
