--- a/appveyor.yml
+++ b/appveyor.yml
@@ -70,7 +70,7 @@ install:
 
     perl -le "print for @INC"
 
-    cpanm --verbose --installdeps .
+    cpanm --installdeps .
 
     set CXXFLAGS=-DJPCRE2_DISABLE_CODE_UNIT_WIDTH_VALIDATION -DPCRE2_STATIC
 
@@ -84,9 +84,6 @@ install:
 
     perl -le "use Alien::JPCRE2; use Env qw(@PATH); unshift @PATH, Alien::JPCRE2->bin_dir(); print q{have Alien::JPCRE2->dist_dir() = }, Alien::JPCRE2->dist_dir(), \"\n\";"
 
-    dir /S /W C:\projects\ALIEN-~1\blib\lib\auto\share\dist\ALIEN-~1\bin
-
-    dir /S /W C:\STRAWB~1\perl\site\lib\auto\share\dist\Alien-PCRE2\bin
 build: off
 test: off
 deploy: off
