--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-# v0.016_000
+# v0.017_000
 version: 1.0.{build}
 pull_requests:
   do_not_increment_build_number: false
@@ -71,6 +71,8 @@ install:
     perl -le "print for @INC"
 
     cpanm --verbose --installdeps .
+
+    set CXXFLAGS=-DJPCRE2_DISABLE_CODE_UNIT_WIDTH_VALIDATION -DPCRE2_STATIC
 
     perl Makefile.PL
 
