--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-# v0.017_000
+# v0.018_000
 version: 1.0.{build}
 pull_requests:
   do_not_increment_build_number: false
@@ -84,9 +84,8 @@ install:
 
     perl -le "use Alien::JPCRE2; use Env qw(@PATH); unshift @PATH, Alien::JPCRE2->bin_dir(); print q{have Alien::JPCRE2->dist_dir() = }, Alien::JPCRE2->dist_dir(), \"\n\";"
 
-    dir /S /W C:\projects\ALIEN-~1\blib\lib\auto\share\dist\ALIEN-~1\bin
+    dir /S /W C:\strawb~1\perl\site\lib\auto\share\dist\Alien-JPCRE2
 
-    dir /S /W C:\STRAWB~1\perl\site\lib\auto\share\dist\Alien-PCRE2\bin
 build: off
 test: off
 deploy: off
