--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-# v0.018_000
+# v0.019_000
 version: 1.0.{build}
 pull_requests:
   do_not_increment_build_number: false
@@ -72,7 +72,7 @@ install:
 
     cpanm --verbose --installdeps .
 
-    set CXXFLAGS=-DJPCRE2_DISABLE_CODE_UNIT_WIDTH_VALIDATION -DPCRE2_STATIC
+    set CXXFLAGS=-DPCRE2_STATIC
 
     perl Makefile.PL
 
