--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-# v0.022_000
+# v0.023_000
 version: 1.0.{build}
 pull_requests:
   do_not_increment_build_number: false
@@ -43,7 +43,7 @@ install:
 
     cpanm --verbose --notest Alien::Build
 
-    set PERL5LIB=blib;lib
+    set PERL5LIB=blib/lib
 
     set MAKE=gmake
 
